--- a/web/contact.html
+++ b/web/contact.html
@@ -5,7 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
     <script src="js/app.js" defer></script>
-    <title>Document</title>
+    <script src="https://kit.fontawesome.com/31ba87c7ce.js" crossorigin="anonymous"></script>
+    <title>Contact</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a>
+        <img src="../images/image-removebg-preview_32.png" alt="/" />
+      </a>
+      <figure>
+        <a>Home</a>
+        <a class="header--contact">Contact</a>
+      </figure>
+    </header>
+    <div class="Front">
+      <p>Contact us</p>
+    </div>
+    <article class="heading">
+      <p>
+       Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dicta officiis aliquam assumenda consequatur, soluta distinctio reiciendis deserunt optio expedita hic repellat ut ipsum corporis voluptatum sequi similique rem vitae.
+       Non molestiae nesciunt tempore veritatis nemo obcaecati minima, reprehenderit architecto dignissimos repellat explicabo asperiores, veniam aperiam repudiandae. Incidunt, temporibus nulla animi repellendus deleniti provident odio cupiditate ex, magnam quisquam ea.
+      </p>
+    </article>
+    <section class="contact">
+      <div class="email">
+        <i class="fa-solid fa-envelope email--icon"></i>
+        <p>Email: info@unric.org</p>
+      </div>
+      <div class="tell">
+        <i class="fa-solid fa-phone"></i>
+        <p>Tell: 31+ 06123456789</p>
+      </div>
+      <div class="nvvn">
+        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+        <a href="https://nvvn.nl/"><p>
+          Website: NVVN
+        </p></a>
+      </div>
+    </section>
+    <footer>
+      <figure>
+        <a href="tel: +31625209282">tel: +31 6 25209282</a>
+        <a href="mailto: 35233@ma-web.nl">E-mail: 35233@ma-web.nl</a>
+        <a href="/">© 2023 Copyright</a>
+      </figure>
+    </footer>
+  </body>
 </html>
