--- a/web/contact.html
+++ b/web/contact.html
@@ -19,13 +19,9 @@
       </figure>
     </header>
     <div class="Front">
-      <p>Contact us</p>
+      <p>Contact ons</p>
     </div>
     <article class="heading">
-      <p>
-       Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dicta officiis aliquam assumenda consequatur, soluta distinctio reiciendis deserunt optio expedita hic repellat ut ipsum corporis voluptatum sequi similique rem vitae.
-       Non molestiae nesciunt tempore veritatis nemo obcaecati minima, reprehenderit architecto dignissimos repellat explicabo asperiores, veniam aperiam repudiandae. Incidunt, temporibus nulla animi repellendus deleniti provident odio cupiditate ex, magnam quisquam ea.
-      </p>
     </article>
     <section class="contact">
       <div class="email">
