--- a/web/index.html
+++ b/web/index.html
@@ -1,87 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <script src="js/app.js" defer></script>
-    <link rel="icon" href="src/Randiko_Logo.svg" type="image/x-icon" />
-    <title>Home</title>
-  </head>
-  <body>
-    <header>
-      <a href="index.html">
-        <img src="src/Randiko_Logo.svg" alt="/" />
-      </a>
-      <figure>
-        <a href="index.html">Home</a>
-        <a href="contact.html" class="header--contact">Contact</a>
-      </figure>
-    </header>
-    <section class="slider--section">
-      <h2>SDG Overview</h2>
-      <figure>
-        <img src="src/Placeholder.webp" alt="/" />
-        <img src="src/Placeholder.webp" alt="/" />
-        <img src="src/Placeholder.webp" alt="/" />
-        <img src="src/Placeholder.webp" alt="/" />
-        <img src="src/Placeholder.webp" alt="/" />
-      </figure>
-    </section>
-    <section class="cta--section">
-      <h2>Speel de SDG Game!</h2>
-      <a href="https://sdggame.nl/" target="_blank">Go!</a>
-    </section>
-    <section class="sdgs--section">
-      <h2>Onze SDGs</h2>
-      <figure>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <script src="js/LanguageHandler.js" defer></script>
+  <link rel="icon" href="src/Randiko_Logo.svg" type="image/x-icon" />
+  <title>Home</title>
+</head>
+
+<body>
+  <header>
+    <a href="index.html">
+      <img src="src/Randiko_Logo.svg" alt="/" />
+    </a>
+    <figure>
+      <a href="index.html">Home</a>
+      <a href="contact.html" class="header--contact">Contact</a>
+    </figure>
+  </header>
+  <section class="slider--section">
+    <h2 id="SDG_Overview">SDG Overview</h2>
+    <figure>
+      <img src="src/Placeholder.webp" alt="/" />
+      <img src="src/Placeholder.webp" alt="/" />
+      <img src="src/Placeholder.webp" alt="/" />
+      <img src="src/Placeholder.webp" alt="/" />
+      <img src="src/Placeholder.webp" alt="/" />
+    </figure>
+  </section>
+  <section class="cta--section">
+    <h2 id="play_SDG">Speel de SDG Game!</h2>
+    <a href="https://sdggame.nl/" target="_blank">Go!</a>
+  </section>
+  <section class="sdgs--section">
+    <h2 id="our_SDGs">Onze SDGs</h2>
+    <figure>
+      <div>
+        <h3>SDG 1</h3>
         <div>
-          <h3>SDG 1</h3>
-          <div>
-            <img src="src/Placeholder.webp" alt="/" />
-          </div>
+          <img src="src/Placeholder.webp" alt="/" />
         </div>
+      </div>
+      <div>
+        <h3>SDG 2</h3>
         <div>
-          <h3>SDG 2</h3>
-          <div>
-            <img src="src/Placeholder.webp" alt="/" />
-          </div>
+          <img src="src/Placeholder.webp" alt="/" />
         </div>
+      </div>
+      <div>
+        <h3>SDG 3</h3>
         <div>
-          <h3>SDG 3</h3>
-          <div>
-            <img src="src/Placeholder.webp" alt="/" />
-          </div>
+          <img src="src/Placeholder.webp" alt="/" />
         </div>
+      </div>
+      <div>
+        <h3>SDG 4</h3>
         <div>
-          <h3>SDG 4</h3>
-          <div>
-            <img src="src/Placeholder.webp" alt="/" />
-          </div>
+          <img src="src/Placeholder.webp" alt="/" />
         </div>
+      </div>
+      <div>
+        <h3>SDG 5</h3>
         <div>
-          <h3>SDG 5</h3>
-          <div>
-            <img src="src/Placeholder.webp" alt="/" />
-          </div>
+          <img src="src/Placeholder.webp" alt="/" />
         </div>
+      </div>
+      <div>
+        <h3>SDG 6</h3>
         <div>
-          <h3>SDG 6</h3>
-          <div>
-            <img src="src/Placeholder.webp" alt="/" />
-          </div>
+          <img src="src/Placeholder.webp" alt="/" />
         </div>
-      </figure>
-    </section>
-    <footer>
-      <a href="index.html">
-        <img src="src/Randiko_Logo.svg" alt="/" />
-      </a>
-      <figure>
-        <a href="tel: +31625209282">tel: +31 6 25209282</a>
-        <a href="mailto: 35233@ma-web.nl">E-mail: 35233@ma-web.nl</a>
-        <a href="/">© 2023 Copyright</a>
-      </figure>
-    </footer>
-  </body>
+      </div>
+    </figure>
+  </section>
+  <footer>
+    <a href="index.html">
+      <img src="src/Randiko_Logo.svg" alt="/" />
+    </a>
+    <figure>
+      <a href="tel: +31625209282">tel: +31 6 25209282</a>
+      <a href="mailto: 35233@ma-web.nl">E-mail: 35233@ma-web.nl</a>
+      <a href="/">© 2023 Copyright</a>
+    </figure>
+  </footer>
+</body>
+
 </html>
