--- a/web/contact.html
+++ b/web/contact.html
@@ -1,64 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <script src="js/app.js" defer></script>
-    <script
-      src="https://kit.fontawesome.com/31ba87c7ce.js"
-      crossorigin="anonymous"
-    ></script>
-    <title>Contact</title>
-  </head>
-  <body>
-    <header>
-      <a href="index.html">
-        <img src="src/Randiko_Logo.svg" alt="/" />
-      </a>
-      <figure>
-        <a href="index.html">Home</a>
-        <a href="contact.html" class="header--contact">Contact</a>
-      </figure>
-    </header>
-    <div class="Front">
-      <p>Contact us</p>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <script src="js/LanguageHandler.js" defer></script>
+  <script src="https://kit.fontawesome.com/31ba87c7ce.js" crossorigin="anonymous"></script>
+  <link rel="icon" href="src/Randiko_Logo.svg" type="image/x-icon" />
+  <title>Contact</title>
+</head>
+
+<body>
+  <header>
+    <a href="index.html">
+      <img src="src/Randiko_Logo.svg" alt="/" />
+    </a>
+    <figure>
+      <a href="index.html">Home</a>
+      <a href="contact.html" class="header--contact">Contact</a>
+    </figure>
+  </header>
+  <div class="Front">
+    <p id="contact_title">Contact us</p>
+  </div>
+  <article class="heading">
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dicta
+      officiis aliquam assumenda consequatur, soluta distinctio reiciendis
+      deserunt optio expedita hic repellat ut ipsum corporis voluptatum sequi
+      similique rem vitae. Non molestiae nesciunt tempore veritatis nemo
+      obcaecati minima, reprehenderit architecto dignissimos repellat
+      explicabo asperiores, veniam aperiam repudiandae. Incidunt, temporibus
+      nulla animi repellendus deleniti provident odio cupiditate ex, magnam
+      quisquam ea.
+    </p>
+  </article>
+  <section class="contact">
+    <div class="email">
+      <i class="fa-solid fa-envelope email--icon"></i>
+      <a href="mailto: info@unric.org">Email: info@unric.org</a>
     </div>
-    <article class="heading">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dicta
-        officiis aliquam assumenda consequatur, soluta distinctio reiciendis
-        deserunt optio expedita hic repellat ut ipsum corporis voluptatum sequi
-        similique rem vitae. Non molestiae nesciunt tempore veritatis nemo
-        obcaecati minima, reprehenderit architecto dignissimos repellat
-        explicabo asperiores, veniam aperiam repudiandae. Incidunt, temporibus
-        nulla animi repellendus deleniti provident odio cupiditate ex, magnam
-        quisquam ea.
-      </p>
-    </article>
-    <section class="contact">
-      <div class="email">
-        <i class="fa-solid fa-envelope email--icon"></i>
-        <a href="mailto: info@unric.org">Email: info@unric.org</a>
-      </div>
-      <div class="tell">
-        <i class="fa-solid fa-phone"></i>
-        <a href="tel: +31625209282">Tel: +31 6 123456789</a>
-      </div>
-      <div class="nvvn">
-        <i class="fa-solid fa-arrow-up-right-from-square"></i>
-        <a href="https://nvvn.nl/"><p>Website: NVVN</p></a>
-      </div>
-    </section>
-    <footer>
-      <a href="index.html">
-        <img src="src/Randiko_Logo.svg" alt="/" />
+    <div class="tell">
+      <i class="fa-solid fa-phone"></i>
+      <a href="tel: +31625209282">Tel: +31 6 123456789</a>
+    </div>
+    <div class="nvvn">
+      <i class="fa-solid fa-arrow-up-right-from-square"></i>
+      <a href="https://nvvn.nl/">
+        <p>Website: NVVN</p>
       </a>
-      <figure>
-        <a href="tel: +31625209282">tel: +31 6 25209282</a>
-        <a href="mailto: 35233@ma-web.nl">E-mail: 35233@ma-web.nl</a>
-        <a href="/">© 2023 Copyright</a>
-      </figure>
-    </footer>
-  </body>
+    </div>
+  </section>
+  <footer>
+    <a href="index.html">
+      <img src="src/Randiko_Logo.svg" alt="/" />
+    </a>
+    <figure>
+      <a href="tel: +31625209282">tel: +31 6 25209282</a>
+      <a href="mailto: 35233@ma-web.nl">E-mail: 35233@ma-web.nl</a>
+      <a href="/">© 2023 Copyright</a>
+    </figure>
+  </footer>
+</body>
+
 </html>
