--- a/web/contact.html
+++ b/web/contact.html
@@ -19,46 +19,39 @@
     <figure>
       <a href="index.html">Home</a>
       <a href="contact.html" class="header--contact">Contact</a>
+      <div>
+        <div id="dutch--b" class="lang--button" onclick="setLanguage('dutch')"></div>
+        <div id="english--b" class="lang--button" onclick="setLanguage('english')"></div>
+      </div>
     </figure>
   </header>
-  <div class="Front">
-    <p id="contact_title">Contact us</p>
-  </div>
-  <article class="heading">
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dicta
-      officiis aliquam assumenda consequatur, soluta distinctio reiciendis
-      deserunt optio expedita hic repellat ut ipsum corporis voluptatum sequi
-      similique rem vitae. Non molestiae nesciunt tempore veritatis nemo
-      obcaecati minima, reprehenderit architecto dignissimos repellat
-      explicabo asperiores, veniam aperiam repudiandae. Incidunt, temporibus
-      nulla animi repellendus deleniti provident odio cupiditate ex, magnam
-      quisquam ea.
-    </p>
-  </article>
-  <section class="contact">
-    <div class="email">
-      <i class="fa-solid fa-envelope email--icon"></i>
-      <a href="mailto: info@unric.org">Email: info@unric.org</a>
+  <main class="contact--page">
+    <div class="Front">
+      <p id="contact_title">Contact ons</p>
     </div>
-    <div class="tell">
-      <i class="fa-solid fa-phone"></i>
-      <a href="tel: +31625209282">Tel: +31 6 123456789</a>
-    </div>
-    <div class="nvvn">
-      <i class="fa-solid fa-arrow-up-right-from-square"></i>
-      <a href="https://nvvn.nl/">
-        <p>Website: NVVN</p>
-      </a>
-    </div>
-  </section>
+    <section class="contact">
+      <div class="email">
+        <i class="fa-solid fa-envelope email--icon"></i>
+        <a href="mailto: info@unric.org">E-mail: info@unric.org</a>
+      </div>
+      <div class="tell">
+        <i class="fa-solid fa-phone"></i>
+        <a href="tel: +31612345678">Tel: +31 612345678</a>
+      </div>
+      <div class="nvvn">
+        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+        <a href="https://nvvn.nl/" target="_blank">
+          Website: NVVN </a>
+      </div>
+    </section>
+  </main>
   <footer>
     <a href="index.html">
       <img src="src/Randiko_Logo.svg" alt="/" />
     </a>
     <figure>
-      <a href="tel: +31625209282">tel: +31 6 25209282</a>
-      <a href="mailto: 35233@ma-web.nl">E-mail: 35233@ma-web.nl</a>
+      <a href="tel: +31612345678">tel: +31 6 12345678</a>
+      <a href="mailto: info@unric.org">E-mail: info@unric.org</a>
       <a href="/">© 2023 Copyright</a>
     </figure>
   </footer>
