--- a/web/index.html
+++ b/web/index.html
@@ -18,6 +18,10 @@
     <figure>
       <a href="index.html">Home</a>
       <a href="contact.html" class="header--contact">Contact</a>
+      <div>
+        <div id="dutch--b" class="lang--button" onclick="setLanguage('dutch')"></div>
+        <div id="english--b" class="lang--button" onclick="setLanguage('english')"></div>
+      </div>
     </figure>
   </header>
   <section class="slider--section">
@@ -80,8 +84,8 @@
       <img src="src/Randiko_Logo.svg" alt="/" />
     </a>
     <figure>
-      <a href="tel: +31625209282">tel: +31 6 25209282</a>
-      <a href="mailto: 35233@ma-web.nl">E-mail: 35233@ma-web.nl</a>
+      <a href="tel: +31612345678">tel: +31 6 12345678</a>
+      <a href="mailto: info@unric.org">E-mail: info@unric.org</a>
       <a href="/">© 2023 Copyright</a>
     </figure>
   </footer>
