--- a/web/index.html
+++ b/web/index.html
@@ -24,61 +24,64 @@
       </div>
     </figure>
   </header>
-  <section class="slider--section">
-    <h2 id="SDG_Overview">SDG Overview</h2>
-    <figure>
-      <img src="src/Placeholder.webp" alt="/" />
-      <img src="src/Placeholder.webp" alt="/" />
-      <img src="src/Placeholder.webp" alt="/" />
-      <img src="src/Placeholder.webp" alt="/" />
-      <img src="src/Placeholder.webp" alt="/" />
-    </figure>
-  </section>
-  <section class="cta--section">
-    <h2 id="play_SDG">Speel de SDG Game!</h2>
-    <a href="https://sdggame.nl/" target="_blank">Go!</a>
-  </section>
-  <section class="sdgs--section">
-    <h2 id="our_SDGs">Onze SDGs</h2>
-    <figure>
-      <div>
-        <h3>SDG 1</h3>
+  <main class="index--page">
+
+    <section class="slider--section">
+      <h2 id="SDG_Overview">SDG Overview</h2>
+      <figure>
+        <img src="src/Placeholder.webp" alt="/" />
+        <img src="src/Placeholder.webp" alt="/" />
+        <img src="src/Placeholder.webp" alt="/" />
+        <img src="src/Placeholder.webp" alt="/" />
+        <img src="src/Placeholder.webp" alt="/" />
+      </figure>
+    </section>
+    <section class="cta--section">
+      <h2 id="play_SDG">Speel de SDG Game!</h2>
+      <a href="https://sdggame.nl/" target="_blank">Go!</a>
+    </section>
+    <section class="sdgs--section">
+      <h2 id="our_SDGs">Onze SDGs</h2>
+      <figure>
         <div>
-          <img src="src/Placeholder.webp" alt="/" />
+          <h3>SDG 1</h3>
+          <div>
+            <img src="src/Placeholder.webp" alt="/" />
+          </div>
         </div>
-      </div>
-      <div>
-        <h3>SDG 2</h3>
         <div>
-          <img src="src/Placeholder.webp" alt="/" />
+          <h3>SDG 2</h3>
+          <div>
+            <img src="src/Placeholder.webp" alt="/" />
+          </div>
         </div>
-      </div>
-      <div>
-        <h3>SDG 3</h3>
         <div>
-          <img src="src/Placeholder.webp" alt="/" />
+          <h3>SDG 3</h3>
+          <div>
+            <img src="src/Placeholder.webp" alt="/" />
+          </div>
         </div>
-      </div>
-      <div>
-        <h3>SDG 4</h3>
         <div>
-          <img src="src/Placeholder.webp" alt="/" />
+          <h3>SDG 4</h3>
+          <div>
+            <img src="src/Placeholder.webp" alt="/" />
+          </div>
         </div>
-      </div>
-      <div>
-        <h3>SDG 5</h3>
         <div>
-          <img src="src/Placeholder.webp" alt="/" />
+          <h3>SDG 5</h3>
+          <div>
+            <img src="src/Placeholder.webp" alt="/" />
+          </div>
         </div>
-      </div>
-      <div>
-        <h3>SDG 6</h3>
         <div>
-          <img src="src/Placeholder.webp" alt="/" />
+          <h3>SDG 6</h3>
+          <div>
+            <img src="src/Placeholder.webp" alt="/" />
+          </div>
         </div>
-      </div>
-    </figure>
-  </section>
+      </figure>
+    </section>
+  </main>
   <footer>
     <a href="index.html">
       <img src="src/Randiko_Logo.svg" alt="/" />
