php integration index.php sdg.php

--- a/public/sdg_sem.html
+++ b/public/sdg_sem.html
@@ -13,11 +13,11 @@
 
 <body>
   <header>
-    <a href="index.html">
+    <a href="index.php">
       <img src="src/Nvvn_Logo.png" alt="/" />
     </a>
     <figure>
-      <a href="index.html">Home</a>
+      <a href="index.php">Home</a>
       <a href="contact.html" class="header--contact">Contact</a>
       <div>
         <div id="dutch--b" class="lang--button" onclick="setLanguage('dutch')"></div>
